--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   "data")</code> to encrypt data, or <code>sjcl.decrypt("password",
   "encrypted-data")</code> to decrypt it.  For users with more complex
   security requirements, there is a much more powerful API, described
-  in the <a href="doc">documentation</a>.</p>
+  in the <a href="doc/">documentation</a> and illustrated in
+  this <a href="demo/">demo page</a>.</p>
 
   <p>SJCL is small but powerful.  The
   <a href="sjcl.js">minified version</a> of the library is under 6.4KB
@@ -45,14 +46,13 @@
   install browsers on the security lab computers (including various
   versions of Internet Explorer, Chrome, Firefox, Safari and Opera on
   Mac, Linux and Windows) and on the rhino engine, but still need to
-  do more comprehensive testing.  We have a <a href="browserTest">test
+  do more comprehensive testing.  We have a <a href="browserTest/">test
   page</a> up on this site; if it reports any failures,
   please <a href="http://github.com/bitwiseshiftleft/sjcl/issues">report
   an issue</a>.</p>
 
   <p>SJCL is open.  You can use, modify and redistribute it under a
   BSD license or under the GNU GPL, version 2.0 or higher.</p>
-
 
   <p>Currently, SJCL supports only symmetric-key cryptography, but
   public-key cryptography using elliptic curves is on the way.</p>
