added link to paper

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 
   <p>SJCL was written by Emily Stark, Mike Hamburg and Dan Boneh at
   Stanford University.  Special thanks to Aldo Cortesi and Roy
-  Nicholson for reporting bugs in earlier versions of SJCL.</p>
+  Nicholson for reporting bugs in earlier versions of SJCL.
+  A <a href="acsac.pdf">whitepaper</a> on SJCL (also by Emily Stark,
+  Mike Hamburg and Dan Boneh) was published in the
+  2009 <a href="http://www.acsac.org">Annual Computer Security
+  Applications Conference</a>.</p>
   </div>
 </body>
 </html>
