--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
   <p>SJCL is open.  You can use, modify and redistribute it under a
   BSD license or under the GNU GPL, version 2.0 or higher.</p>
 
-  <p>Currently, SJCL supports only symmetric-key cryptography, but
-  public-key cryptography using elliptic curves is on the way.</p>
+  <p>SJCL supports primarily symmetric-key cryptography, but there's an
+  <a href="https://github.com/bitwiseshiftleft/sjcl/tree/ecc">experimental branch</a>
+  with elliptic curve support (ECDH public key encryption and ECDSA signatures).</p>
 
   <p>SJCL was written by Emily Stark, Mike Hamburg and Dan Boneh at
   Stanford University.  Special thanks to Aldo Cortesi and Roy
