--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
   <p>SJCL is open.  You can use, modify and redistribute it under a
   BSD license or under the GNU GPL, version 2.0 or higher.</p>
 
-  <p>SJCL supports primarily symmetric-key cryptography, but there's an
-  <a href="https://github.com/bitwiseshiftleft/sjcl/tree/ecc">experimental branch</a>
-  with elliptic curve support (ECDH public key encryption and ECDSA signatures).</p>
+  <p>SJCL also supports elliptic curve cryptography (ECDH public key encryption and ECDSA signatures). If you want to use it, you will have to compile your own version of sjcl.js</p>
 
   <p>SJCL was written by Emily Stark, Mike Hamburg and Dan Boneh at
   Stanford University.  Special thanks to Aldo Cortesi and Roy
