new compiled version. browserTest/entropy path.

--- a/browserTest/entropy.html
+++ b/browserTest/entropy.html
@@ -18,7 +18,7 @@
 }
 </style>
 
-<script type="text/javascript" src="sjcl.js">
+<script type="text/javascript" src="../sjcl.js">
 </script>
 
 <script type="text/javascript">
