update link to main repo (now points to master branch)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="main">
 
   <p>The Stanford Javascript Crypto Library
-  (hosted <a href="http://github.com/bitwiseshiftleft/sjcl/tree/version-0.8">here</a>
+  (hosted <a href="http://github.com/bitwiseshiftleft/sjcl/">here</a>
   on GitHub) is a project by the Stanford Computer Security Lab to
   build a secure, powerful, fast, small, easy-to-use, cross-browser
   library for cryptography in Javascript.</p>
