--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   a factor of 1000 and salts them to protect against rainbow tables,
   and it authenticates every message it sends to prevent it from being
   modified.  We believe that SJCL provides the best security which is
-  practically available in Javascript.  (Unforunately, this is not as
+  practically available in Javascript.  (Unfortunately, this is not as
   great as in desktop applications because it is not feasible to
   completely protect against code injection, malicious servers and
   side-channel attacks.)</p>
